--- a/프로젝트 계획서.md
+++ b/프로젝트 계획서.md
@@ -24,8 +24,22 @@
 > **2.분석 및 설계**
 
 1. 요구사항 정의
+
 2. 개발 언어 및 활용 기술
+
 3. 예산
+
+   | 항목              | 상세(사유)                                                   | 수량 | 비용       |
+   | ----------------- | ------------------------------------------------------------ | ---- | ---------- |
+   | AWS 프로젝트 서버 | ※ 미신청 시 제공되지 않음. 1대 초과 신청 시에는 각 서버에 대한 목적 필수 기입 | 1    |            |
+   | 이러닝-인프런     | 파이썬 머신러닝 완벽 가이드  https://www.inflearn.com/course/파이썬-머신러닝-완벽가이드 | 1    | 99000      |
+   | 도서              | 파이썬 머신러닝 완벽 가이드  http://www.yes24.com/Product/Goods/69752484 | 1    | 38000      |
+   | 이러닝-인프런     | 초보를 위한 도커 안내서  [https://www.inflearn.com/course/%EB%8F%84%EC%BB%A4-%EC%9E%85%EB%AC%B8](https://www.inflearn.com/course/도커-입문) | 1    | 29700      |
+   | 이러닝-인프런     | SVG 마스터  https://www.inflearn.com/course/mastering-svg    | 1    | 27500      |
+   | 이러닝-인프런     | 함수형 프로그래밍과 JavaScript ES6+  https://www.inflearn.com/course/functional-es6 | 1    | 55000      |
+   | **합계**          |                                                              |      | **249200** |
+
+   
 
 
 
@@ -50,5 +64,7 @@
    | 20.10.15   | 20.10.16   | 기능 목록 상세 도출         |
 
 3. 애플리케이션 아키텍쳐
+
+![architecture](./images/1.png)
 
 ![image-20201015144714041](./images/2.png)
