--- a/프로젝트 계획서.md
+++ b/프로젝트 계획서.md
@@ -67,4 +67,6 @@
 
 ![architecture](./images/1.png)
 
-![image-20201015144714041](./images/2.png)
+![image-20201015144714041](./images/2.jpg)
+![image-20201015144714041](./images/3.jpg)
+![image-20201015144714041](./images/4.jpg)
