--- a/계획서.md
+++ b/계획서.md
@@ -44,3 +44,7 @@
         - 오늘 뭐했나요?
         - 이때 느낌이 어땠나요?
 2. 텍스트와 이미지가 서로 충돌하지 않는 UI/UX
+3. 음악 관련
+   - 딥링크 활용한 UX도 고려
+     - 앱이 특정 지점까지 연결해주는 URI
+   - 유튜브 단순연결로 저작권 침해없을듯
